--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,70 +1,34 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
 
+  shared:
+    errors:
+      header:
+        one: "%{count} error detected"
+        other: "%{count} errors detected"
+    footer:
+      header: "About Test Guru"
+      author: "Test-Guru by Eduard Gimaev on the github"
+      link: "Educational project in an online school Thinknetica"
+#USER
+  test_passages:
+    result:
+      header: "Test %{title} has been successfully completed!"
+      score: "Dear %{user} your score: "
+      success: "Test passed."
+      fail: "Try again."
+      back: "Back to tests"
+    show:
+      header: "You are passing the %{title} test"
+      question: "Question № %{current_question} / %{all_questions}"
+      next: "Next"
+      back: "All tests"
   tests:
-    index
-      header: "Tricky Tests"
-
-admin:
-  tests:
+    test:
+      questions: "Questions"
+      start: "Start"
     index:
-     header: "Tricky Tests"
-
-admin:
-  tests:
-    create:
-      success: "Test was succesfully created."
-    index:
       header: "Tricky Tests"
-
-helpers:
-  submit:
-    test:
-      create: "Create Test"
-      update: "Update Test"
-
-helpers:
-  submit:
-    test:
-      create: "Create Test"
-      update: "Create Test"
-  label:
-    test:
-      title: "Название"
-      level: "Уровень"
-      category_id: "Категория"
-
-test_passages:
-  result:
-    header: "Tes %{title} was succesfully completed!"      
+      title: "Title"
+      actions: "Actions"
+      login: "login"
+      sign: "signup"
