--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -38,6 +38,9 @@ ru:
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
     registrations:
+      new:
+        header: "Давайте станем Гуру"
+        min_characters: "минимум %{min} символов"
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, вы не можете войти, потому что ваша учетная запись ещё не активирована."
