--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -49,6 +49,8 @@ en:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
     sessions:
+      new:
+        header: "Hi, Guru! log in please!"
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
