--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -50,6 +50,8 @@ ru:
       updated: "Ваша учётная запись успешно изменена."
       updated_but_not_signed_in: "Ваш аккаунт успешно изменен, но так как ваш пароль изменился, нужно войти снова."
     sessions:
+      new:
+        header: "Приветствую, Гуру! Войдите в Ваш профиль пожалуйста!"
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
       already_signed_out: "Выход из системы выполнен."
