--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,5 +111,6 @@ en:
     completed_test:
       subject: "You just completed the TestGuru test!"
   services:
-    description: "A question about %{title} form TestGuru"
+    gist_question_service:
+      description: "A question about %{title} form TestGuru"
 
