--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,9 @@ en:
         title: "Title"
         level: "Level"
         category_id: "Category" 
+#Gist
+  description: "A question about %{test_title} form TestGuru"
+
 #ADMIN
   admin:
     answers:
@@ -89,8 +92,8 @@ en:
 #USER
   test_passages:
     result:
-      header: "Test %{title} has been successfully completed!"
-      score: "Dear %{user} your score: "
+      header: "Dear %{user}, test %{title} has been successfully completed!"
+      score: "Your score: "
       success: "Test passed."
       fail: "Try again."
     show:
@@ -99,8 +102,6 @@ en:
     gist: 
       success: "Gist has been succesfully saved"
       failure: "Gist has not been saved"
-
-      
   tests:
     test:
       question: "Question"
@@ -110,7 +111,4 @@ en:
   tests_mailer:
     completed_test:
       subject: "You just completed the TestGuru test!"
-  services:
-    gist_question_service:
-      description: "A question about %{title} form TestGuru"
-
+  
