feat: added methos destoy to admin/gists_controllers

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -59,6 +59,7 @@ ru:
         question: "Вопрос:"
         url: "Gist url:"
         author: "Автор:"
+        actions: "Действия"
     questions:
       new:
         header: "Создание нового вопроса"
