--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,7 @@ en:
         question: "Question"
         url: "Gist url"
         author: "Author"
+        actions: "Actions"
     questions:
       new:
         header: "Creating a new question"
