--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,6 +12,7 @@ ru:
     new_answer: "Новый ответ"
     show: "Показать"
     edit: "Изменить"
+    edit_title: "Изменить название теста"
     delete: "Удалить"
     confirm: "Вы уверены?"
     signup: "Зарегистрироваться"
