feat: added feedback

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,11 @@ en:
         header: "Answer's details"
         answer: "Answer:"
         correct: "Correct:"
+    feedbacks:
+      index:
+        header: "Feedbacks"
+        feedback: "Feedback"
+        author: "Author"
     gists:
       index:
         question: "Question"
@@ -92,7 +97,13 @@ en:
         submit: "OK"
     nav:
       header: "TestGure | AdminKa"
-
+#USER
+  feedbacks:
+    new:
+      header: "Dear %{user}, please leave your feedback here"
+  gists:
+    success: "Gist has been succesfully saved"
+    failure: "Gist has not been saved"
   shared:
     errors:
       header:
@@ -102,10 +113,6 @@ en:
       header: "About Test Guru"
       author: "Test-Guru by Eduard Gimaev on the github"
       link: "Educational project in an online school Thinknetica"
-#USER
-  gists:
-    success: "Gist has been succesfully saved"
-    failure: "Gist has not been saved"
   test_passages:
     result:
       header: "Dear %{user}, test %{title} has been successfully completed!"
