feat: added feedback mailer, saving in the DB is fine, but admin does not recieve itby email

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,12 @@ en:
     nav:
       header: "TestGure | AdminKa"
 #USER
+  feedback_mailer:
+    send_feedback:
+      header: "Feedback has been sent succesfully"
+      user: "User: "
+      subject: "Subject: "
+      feedback: "Message: "
   feedbacks:
     new:
       header: "Dear %{user}, please leave your feedback here"
