feat: added service get badge by (level, first try, category) but not display for users so far

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,7 @@ en:
         title: "Title: "
         picture: "Picture: "
         rule: "Rule: "
+        rule_params: "Rule params: "
     feedbacks:
       index:
         header: "Feedbacks"
