--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,6 +23,8 @@ ru:
     next: "Следующий"
     gist_questions: "Gists_вопросов"
     feedback: "Обратная связь"
+    user_badges: "Бейджи пользователей"
+    badges: "Бейджи"
     no_questions: "В данном тесте еще нет вопросов"
     no_answers: "Выберите хотя бы один ответ"
 
@@ -67,7 +69,7 @@ ru:
       show:
         header: "Детали бейджа"
         title: "Наименование: "
-        picture: "Картинка: "
+        picture: "Бейдж: "
         rule: "Правило: "
         rule_params: "Правило параметр: "
     feedbacks:
@@ -106,6 +108,12 @@ ru:
         quesiton: "Вопрос"
       form_inline:
         submit: "OK"
+    user_badges:
+      index:
+        header: "Бейджи пользователей"
+        user: "Пользователь"
+        picture: "Бейдж"
+        badge: "Описание бейджа"
     nav:
       header: "TestGure | АдминКа"
 
@@ -121,6 +129,17 @@ ru:
       author: "Test-Guru от Эдуарда Гимаева на github"
       link: "Образовательный проект от онлайн школы Thinknetica"
 #USER
+  badges:
+      index:
+        header: "Доступные бейджи"
+        picture: "Бейдж"
+        badge: "Описание бейджа"
+      show:
+        header: "Детали бейджа"
+        title: "Наименование: "
+        picture: "Бейдж: "
+        rule: "Правило: "
+        rule_params: "Правило параметр: "
   feedbacks_mailer:
     sending_feedback:
       header: "Сообщение обратной связи успешно обтравлено"
@@ -150,8 +169,14 @@ ru:
     test:
       question: "Вопрос"
     index:
+      user_badges: "%{user} - бейджи"
       header: "Доступные тесты"
       title: "Название"
   tests_mailer:
     completed_test:
       subject: "Вы закончили TestGuru тест!"
+  user_badges:
+      index:
+        header: "Мои бейджи"
+        picture: "Бейдж"
+        badge: "Описание бейджа"
