fix: just up-to-date something

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,7 +162,7 @@ en:
     test:
       question: "Question"
     index:
-      user_badges: "%{user} has badges"
+      user_badges: "%{user} - badges"
       header: "Tricky Tests"
       title: "Title"
   tests_mailer:
